--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,10 @@ repositories {
 dependencies {
     testImplementation ("com.codeborne:selenide:7.7.1")
     testImplementation("org.junit.jupiter:junit-jupiter:5.11.4")
+    testImplementation ("org.slf4j:slf4j-simple:2.0.7")
 }
 
+
+test {
+    useJUnitPlatform()
+}
